[gd_scene load_steps=9 format=3 uid="uid://co3ih2ailn7gj"]

[ext_resource type="Script" path="res://scenes/minigames/sisalto/Viuhti.gd" id="1_arfwe"]
[ext_resource type="Texture2D" uid="uid://c0rom3gvyt22a" path="res://icon.svg" id="1_ex747"]
[ext_resource type="Script" path="res://scenes/minigames/sisalto/sisalto.gd" id="1_pqpm0"]
[ext_resource type="PackedScene" uid="uid://cqhairiy7f7tn" path="res://scenes/minigames/sisalto/prefabs/game_container.tscn" id="2_euyie"]
[ext_resource type="PackedScene" uid="uid://wkaeyl656b3s" path="res://scenes/minigames/sisalto/prefabs/game.tscn" id="2_lrv78"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_schj7"]
size = Vector2(118, 300)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ea1ef"]
size = Vector2(61.4034, 87.7193)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30mpc"]
size = Vector2(2211, 270)

[node name="Sisalto" type="Node2D"]
script = ExtResource("1_pqpm0")
game_prefab = ExtResource("2_lrv78")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Viuhti" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(557, 410)
scale = Vector2(0.57, 0.57)
collision_mask = 5
script = ExtResource("1_arfwe")

[node name="Icon" type="Sprite2D" parent="Viuhti"]
position = Vector2(0, 91)
scale = Vector2(1, 2.42188)
texture = ExtResource("1_ex747")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Viuhti"]
position = Vector2(0, 91)
shape = SubResource("RectangleShape2D_schj7")

[node name="GameCollisionArea" type="Area2D" parent="Viuhti"]
position = Vector2(1.75439, 150.877)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Viuhti/GameCollisionArea"]
shape = SubResource("RectangleShape2D_ea1ef")

[node name="HeldGame" type="Sprite2D" parent="Viuhti"]
visible = false
position = Vector2(-1.75439, 103.509)
scale = Vector2(0.630482, 1)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(621, 962)
collision_layer = 4
collision_mask = 7
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(335.5, 0)
shape = SubResource("RectangleShape2D_30mpc")

[node name="ColorRect" type="ColorRect" parent="Ground"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -626.0
offset_top = -134.0
offset_right = 1306.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.45098, 0.176471, 1)

[node name="Games" type="Node" parent="."]

[node name="GameContainers" type="Node2D" parent="."]
z_index = -10
position = Vector2(112, 473)

[node name="Tasoloikat" parent="GameContainers" instance=ExtResource("2_euyie")]

[node name="Retropelit" parent="GameContainers" instance=ExtResource("2_euyie")]
position = Vector2(900, 0)

[node name="Kauhupelit" parent="GameContainers" instance=ExtResource("2_euyie")]
position = Vector2(300, 0)

[node name="Heppapelit" parent="GameContainers" instance=ExtResource("2_euyie")]
position = Vector2(600, 0)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_shape_entered" from="Viuhti/GameCollisionArea" to="Viuhti" method="_on_game_collision_area_area_shape_entered"]
